--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/webpack-env": ">=1.12.1 <1.14.0",
     "office-ui-fabric-react": "^2.21.0",
     "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "sp-pnp-js": "2.0.4"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "~1.0.1",
