added upload option

--- a/src/webparts/giphyRandom/GiphyRandomWebPart.manifest.json
+++ b/src/webparts/giphyRandom/GiphyRandomWebPart.manifest.json
@@ -14,7 +14,7 @@
     "description": { "default": "Get a random giphy gif based on search query" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "GiphyRandom"
+      "listName": ""
     }
   }]
 }
